# sensVeridian

./: .gitignore  404.html  PAGES_SETUP.md  README.md  USAGE.md  index.html  mkdocs.yml  pyproject.toml  requirements-docs.txt  sitemap.xml
.github/workflows/: deploy-pages.yml  docs.yml  pages.yml
api/: index.html
augmentation/calibration/: index.html
augmentation/distance-sweep/: index.html
augmentation/frame-miniaturize/: index.html
augmentation/manual-overrides/: index.html
docs/docs/: api.md  index.md
getting-started/architecture/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
operations/environment/: index.html
operations/tips/: index.html
operations/troubleshooting/: index.html
redis/config/: index.html
redis/management/: index.html
redis/overview/: index.html
scripts/: migrate_faces_to_redis.py  redis_start.sh  redis_status.sh  redis_stop.sh
search/: search_index.json
src/sensveridian/: cli.py  config.py  hashing.py  orchestrator.py  seed_faces.py
tests/: conftest.py  test_calibration.py  test_camera.py  test_cli.py  test_depth_estimator.py  test_depth_utils.py  test_distance_sweep.py  test_duck_extended.py  test_effects.py  test_faces_registry.py  test_frame_miniaturize.py  test_geometry.py  test_geometry_extended.py  test_hashing.py  test_inpaint.py  test_manual_distance.py  test_orchestrator.py  test_runners_common.py  test_runners_logic.py  test_segment.py  test_store.py
user-guide/cli/: index.html
user-guide/data-model/: index.html
user-guide/features/: index.html
(+39 files in other folders)
